# bug-reporter-voice-agent

./: .cursorrules  .gitignore
agent/: agent.py  pyproject.toml
docs/ai/: ARCHITECTURE.md  CHANGELOG_AI.md  COMMON_COMPONENTS.md  DB.dbml  PRODUCT_PLAYBOOK.md  PROJECT_OVERVIEW.md  TASK_LOG.md  USER_JOURNEYS.md
frontend/: package-lock.json
frontend/components/app/: session-view.tsx
